# VNTR_Genotyping

./: .gitignore  README.md  environment.yml
data/ReferenceGenomes/hg38_GCF_000001405.40/: hg38_alt_loci_placement.tsv  md5sum.txt
data/ReferenceGenomes/hg38_GCF_000001405.40/ncbi_dataset/data/: assembly_data_report.jsonl  data_summary.tsv  dataset_catalog.json
data/Samples/: test_results_normalized.csv  test_results_raw.csv  test_sample.bam  test_sample.bam.bai
data/VNTRAnnotations/: dat1_regions.bed  v1_VNTR_Annotations_03_07_2026.bed
docs/: future_topics.md
src/1000Genomes_Analysis/: 1000Genomes_Analysis.py  plot_cn_variable.py  plot_cn_variable_heatmap_linear.py  plot_cn_variable_heatmap_linear_iqr.py  plot_cn_variable_heatmap_powerlaw.py  plot_cn_variable_heatmap_powerlaw_iqr.py  plot_cn_variable_iqr.py  plot_cn_variable_powerlaw.py  plot_cn_variable_powerlaw_iqr.py  sample_names.csv
src/VNTR_GenotypingTool/Python/: count_reads.py  pyproject.toml
src/VNTR_GenotypingTool/Python/vntr_genotyping/: __init__.py  _counting.py  _io.py  _mapping.py  cli.py
src/VNTR_GenotypingTool/R/vntrGenotyping/: DESCRIPTION  NAMESPACE
src/VNTR_GenotypingTool/R/vntrGenotyping/R/: count_vntrs.R
src/VNTR_GenotypingTool/Temp/: build_annotation_bed.py  build_flow_diagram.py
